添加圣斗士关卡

--- a/SGameProject/settings/project.json
+++ b/SGameProject/settings/project.json
@@ -1,3 +1,11 @@
 {
+  "collision-matrix": [
+    [
+      true
+    ]
+  ],
+  "group-list": [
+    "default"
+  ],
   "start-scene": "8cde38ca-4fe1-4ef5-aec3-5d40b89eda55"
 }
